Support for 1.17